Add in RxFragmentActivity and RxActionBarActivity to make using compat packages easier.

--- a/RxApp.Example.Android/Resources/layout/Main.axml
+++ b/RxApp.Example.Android/Resources/layout/Main.axml
@@ -3,6 +3,9 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/Toolbar" />
     <Button
         android:id="@+id/myButton"
         android:layout_width="fill_parent"
